# Labs_3_semester

./: .travis.yml  README.md  appveyor.yml
tests_catch/: CMakeLists.txt  README.md
tests_catch/include/: func.h
tests_catch/tests/: func.cpp
